--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,13 +15,16 @@ services:
     depends_on:
       - co-bill-service
       - co-logistic-service
+      - co-order-service
     environment:
       - HOST=co-checkout-service
       - PORT=3001
-      - BILL_HOST=co-bill-service
-      - BILL_PORT=3002
-      - LOGISTIC_HOST=co-logistic-service
-      - LOGISTIC_PORT=3003
+      - BILL_MS_HOST=co-bill-service
+      - BILL_MS_PORT=3002
+      - LOGISTIC_MS_HOST=co-logistic-service
+      - LOGISTIC_MS_PORT=3003
+      - ORDER_MS_HOST=co-order-service
+      - ORDER_MS_PORT=3004
   co-bill-service: 
     container_name: co-bill-service
     build: './co-bill-service'
@@ -38,3 +41,13 @@ services:
     environment:
       - HOST=co-logistic-service
       - PORT=3003
+  co-order-service: 
+    container_name: co-order-service
+    build: './co-order-service'
+    ports: 
+      - 3004:3004
+      - 3005:3005
+    environment:
+      - HOST=co-order-service
+      - MS_PORT=3004
+      - API_PORT=3005
